# spooky-games

./: LICENSE  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/apps/api/: apps.py  urls.py
backend/apps/core/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/reservations/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reservations/migrations/: 0001_initial.py  0002_remove_game_price.py  0003_reservation_owner.py  0004_participant.py  0005_remove_reservation_num_players.py  0006_reservation_price.py  0007_alter_reservation_game.py
backend/config/: settings.py  urls.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: Accordion.tsx  Alerts.tsx  App.tsx  ContactForm.tsx  Footer.tsx  Navbar.tsx  main.tsx
frontend/src/components/: BookSessionsForm.tsx  ContactForm.tsx  Footer.tsx  Navbar.tsx  SessionCard.tsx
frontend/src/features/api_response/: model.tsx
frontend/src/features/contact/: Contact.tsx
frontend/src/features/contact/components/: ContactForm.tsx
frontend/src/features/home/: Home.tsx
frontend/src/features/sessions/: api.tsx  model.tsx
frontend/src/features/users/: api.tsx  models.tsx
frontend/src/pages/: BookSession.tsx  Contact.tsx  Home.tsx  Sessions.tsx
horrific-escape-game/: index.html  package-lock.json  package.json  tailwind.config.ts
horrific-escape-game/src/: App.tsx  Navbar.tsx  main.tsx
(+24 files in other folders)
